MB-58654: Return bucket name as the key stat name

And disable validation for that stat

Change-Id: Ic84cffb7e543df51f41b8b8a7d15b2fef23175f2
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/197180
Tested-by: Ben Huddleston <ben.huddleston@couchbase.com>
Reviewed-by: Ben Huddleston <ben.huddleston@couchbase.com>